# Platformer

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Iterator.h  Types.h  main.cpp
src/game_object/: GameObject.cpp  GameObject.h  GameObjectContainer.cpp  GameObjectContainer.h
src/geometry/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
src/physics/: CollisionProcessor.cpp  CollisionProcessor.h  MapPlatform.cpp  MapPlatform.h  PhysicalEngine.cpp  PhysicalEngine.h  PhysicalEngine_0.cpp  PhysicalEngine_0.h  PhysicalObject.cpp  PhysicalObject.h  PhysicalWorld.cpp  PhysicalWorld.h  StrictCollisionProcessor.cpp  StrictCollisionProcessor.h  TestObject.cpp  TestObject.h
src/platform/: Key.cpp  Key.h  Platform.cpp  Platform.h  PlatformManager.cpp  PlatformManager.h
src/platform/qt5/: QtApplication.cpp  QtApplication.h  QtCanvasWidget.cpp  QtCanvasWidget.h  QtPlatformManager.cpp  QtPlatformManager.h  QtVisualizer.cpp  QtVisualizer.h
src/visitor/: GameObjectVisitor.cpp  GameObjectVisitor.h  GamePainter.cpp  GamePainter.h  HierarchicalVisitor.cpp  HierarchicalVisitor.h  SimpleHierarchicalVisitor.h  SimpleVisitor.h  VisitorBase.h
src/visualizer/: Visualizer.cpp  Visualizer.h
